[package]
name = "xic"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
lalrpop-util = "0.19"
structopt = "0.3"
pretty = "0.11"
petgraph = "0.6"
rand = "0.8"

[build-dependencies]
lalrpop = "0.19"

[dev-dependencies]
insta = "1.14"
test-generator = "0.3"
